# visual-place-recognition

./: .gitignore  CMakeLists.txt  README.md  test.html
include/: place_recognition.hpp
libraries/bow/include/: bow.hpp  kmeans.hpp
libraries/bow/src/: bow.cpp  kmeans.cpp
libraries/image_browser/include/: image_browser.hpp
libraries/serialization/src/: convert_dataset.cpp  serialize.cpp
src/: main.cpp  main_query_copy_del.cpp  place_recognition.cpp
